# IA-Project1

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  test.py
data/: AStarAlgorithm_stats.csv  BFSAlgorithm_stats.csv  DFSAlgorithm_stats.csv  GreedySearchAlgorithm_stats.csv  IterDeepAlgorithm_stats.csv  WeightedAStarAlgorithm_stats.csv
src/: Game.py  GameData.py  game.py  game_controller.py  game_data.py  game_model.py  main.py  states.py
src/AI/: algorithm_registry.py  algorithms.py  heuristics.py
src/game_logic/: constants.py  rules.py
src/gui/: game.py  menu.py  select_level.py
src/states/: GameOverState.py  GameState.py  GameplayState.py  LevelCompleteState.py  MainMenuState.py  PauseState.py  SelectAIAlgoState.py  SelectLevelState.py  SelectModeState.py  SelectPlayerState.py
src/utils/: ai.py  file.py  measuring.py  misc.py  ui.py
woodblock/: game.py  game_data.py  main.py  states.py
woodblock/ai/: algorithm_registry.py  algorithms.py  heuristics.py
woodblock/assets/: assets.py
woodblock/custom/: easy.json  hard.json
woodblock/game_logic/: constants.py  rules.py
woodblock/utils/: ai.py  file.py  misc.py  ui.py
