[project]
name = "woodblock"
version = "1.1.0"
authors = [
    { name = "Gabriel Carvalho", email = "up202208939@up.pt" },
    { name = "Guilherme Silva", email = "up202205298@up.pt" },
    { name = "Valentina Cadime", email = "up202206262@up.pt" },
]
maintainers = [{ name = "Guilherme Silva", email = "up202205298@up.pt" }]
description = "A woodblock game with AI playing mode"
readme = "README.md"
requires-python = ">=3.10"

dependencies = ["pygame>=2.6.1"]

[dependency-groups]
dev = ["mypy>=1.19.1", "ruff>=0.15.6"]

[project.urls]
Homepage = "https://github.com/gsilva00/IA-Project1"
Repository = "https://github.com/gsilva00/IA-Project1"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
woodblock = "woodblock.main:main"

[tool.ruff]
line-length = 130

[tool.ruff.lint]
select = ["ALL"]

ignore = [
    "C90",     # mccabe
    "COM812",  # missing-trailing-comma (avoid conflict with formatter)
    "D203",    # incorrect-blank-line-before-class
    "D213",    # multi-line-summary-second-line
    "D100",    # undocumented-public-module
    "D104",    # undocumented-public-package
    "D107",    # undocumented-public-init
    "E501",    # line-too-long
    "EM101",   # raw-string-in-exception
    "EM102",   # f-string-in-exception
    "FA100",   # future-rewritable-type-annotation (runtime type annotations needed for woodblock)
    "FIX002",  # line-contains-todo
    "G004",    # logging-f-string
    "PLR0913", # too-many-arguments
    "S101",    # assert
    "SIM105",  # suppressible-exception
    "TD002",   # missing-todo-author
    "TD003",   # missing-todo-link
    "TRY003",  # raise-vanilla-args
]

[tool.ruff.lint.flake8-annotations]
# Suppress ANN401 for *args and **kwargs
allow-star-arg-any = true

[tool.mypy]
files = ["woodblock"]
# Strictness
strict = true
warn_unreachable = true
# Output
pretty = true
show_column_numbers = true
